fixed education page x overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -20,9 +20,11 @@
 
 body {
   box-sizing: border-box;
+  width: 100%;
   margin: 0px;
   padding: 0px;
   font-family: "Sora", sans-serif;
+  overflow-x: hidden;
 }
 
 .flex {
@@ -439,7 +441,7 @@ section.education-introduction > div {
 section.education-options {
   justify-content: center;
   background-color: var(--brown-accent);
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .heat-option {
@@ -450,7 +452,7 @@ section.education-options {
   align-items: center;
   justify-content: space-evenly;
   text-align: center;
-  margin: 0.5rem;
+  margin: 0.5rem 0.5rem;
   padding: 0.5rem 0rem;
   cursor: pointer;
 }
